feat: Initial header with navigation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/globals.css" />
 		<link rel="stylesheet" href="css/header.css" />
+		<link rel="stylesheet" href="css/utils.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,5 +18,21 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body></body>
+	<body>
+		<header class="header">
+			<div class="container">
+				<div class="stack">
+					<div class="logo"></div>
+
+					<nav class="nav">
+						<ul class="nav__links">
+							<li><a href="pages/home.html" class="nav__link">Home</a></li>
+							<li><a href="pages/about.html" class="nav__link">About</a></li>
+							<li><a href="pages/contact.html" class="nav__link">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+	</body>
 </html>
