feat: Home hero section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/globals.css" />
 		<link rel="stylesheet" href="css/header.css" />
 		<link rel="stylesheet" href="css/utils.css" />
+		<link rel="stylesheet" href="css/main.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,5 +35,15 @@
 				</div>
 			</div>
 		</header>
+
+		<div class="container">
+			<section class="section">
+				<h1 class="page-title">UI/UX & Graphic Designer</h1>
+				<p class="paragraph paragraph--centered">
+					I am a Graphic & Web Designer based in New York, specializing in User Interface
+					Design and Development.
+				</p>
+			</section>
+		</div>
 	</body>
 </html>
