--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 		<title>Portfolio</title>
 
 		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/globals.css" />
-		<link rel="stylesheet" href="css/header.css" />
-		<link rel="stylesheet" href="css/utils.css" />
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/styles.css" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
