feat: footer initial structure

--- a/index.html
+++ b/index.html
@@ -1,46 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Portfolio</title>
 
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/styles.css" />
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Portfolio</title>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
-			rel="stylesheet"
-		/>
-	</head>
-	<body>
-		<header class="header">
-			<div class="container">
-				<div class="stack">
-					<div class="logo"></div>
+	<link rel="stylesheet" href="css/reset.css" />
+	<link rel="stylesheet" href="css/styles.css" />
 
-					<nav class="nav">
-						<ul class="nav__links">
-							<li><a href="pages/home.html" class="nav__link">Home</a></li>
-							<li><a href="pages/about.html" class="nav__link">About</a></li>
-							<li><a href="pages/contact.html" class="nav__link">Contact</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
+</head>
 
+<body>
+	<header class="header">
 		<div class="container">
-			<section class="section">
-				<h1 class="page-title">UI/UX & Graphic Designer</h1>
-				<p class="paragraph paragraph--centered">
-					I am a Graphic & Web Designer based in New York, specializing in User Interface
-					Design and Development.
-				</p>
-			</section>
+			<div class="stack">
+				<div class="logo"></div>
+
+				<nav class="nav">
+					<ul class="nav__links">
+						<li><a href="pages/home.html" class="nav__link">Home</a></li>
+						<li><a href="pages/about.html" class="nav__link">About</a></li>
+						<li><a href="pages/contact.html" class="nav__link">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
 		</div>
-	</body>
+	</header>
+
+	<div class="container">
+		<section class="section">
+			<h1 class="page-title">UI/UX & Graphic Designer</h1>
+			<p class="paragraph paragraph--centered">
+				I am a Graphic & Web Designer based in New York, specializing in User Interface
+				Design and Development.
+			</p>
+		</section>
+	</div>
+
+	<footer class="footer">
+		<div class="stack container">
+			<div>
+				<h3 class="footer__title">
+					Piroll Design, Inc.
+				</h3>
+
+				<p>
+					© 2017 Piroll. All rights reserved.
+					<br />
+					Designed by robiurk.
+				</p>
+			</div>
+
+			<div class="stack">
+				<div>
+					hello@pirolltheme.com
+					+44 987 065 908
+				</div>
+
+				<div class="stack">
+					<ul>
+						<li><a href="#">Projects</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Career</a></li>
+					</ul>
+
+					<ul>
+						<li><a href="#">News</a></li>
+						<li><a href="#">Events</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="#">Legal</a></li>
+					</ul>
+				</div>
+
+				<ul>
+					<li><a href="#">Facebook</a></li>
+					<li><a href="#">Instagram</a></li>
+					<li><a href="#">Twitter</a></li>
+					<li><a href="#">Dribble</a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
+</body>
+
 </html>
