feat: page fill viewport size

--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
 		</div>
 	</header>
 
-	<div class="container">
-		<section class="section">
-			<h1 class="page-title">UI/UX & Graphic Designer</h1>
-			<p class="paragraph paragraph--centered">
-				I am a Graphic & Web Designer based in New York, specializing in User Interface
-				Design and Development.
-			</p>
-		</section>
-	</div>
+	<main>
+		<div class="container">
+			<section class="section">
+				<h1 class="page-title">UI/UX & Graphic Designer</h1>
+				<p class="paragraph paragraph--centered">
+					I am a Graphic & Web Designer based in New York, specializing in User Interface
+					Design and Development.
+				</p>
+			</section>
+		</div>
+	</main>
 
 	<footer class="footer">
 		<div class="stack container">
