fix: form styles adjusted

--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,19 @@
 
 		<main>
 			<div class="container">
-				<section class="section">
-					<h1 class="page-title">UI/UX & Graphic Designer</h1>
-					<p class="paragraph paragraph--centered">
-						I am a Graphic & Web Designer based in New York, specializing in User
-						Interface Design and Development.
-					</p>
+				<section class="section" id="contact">
+					<form class="form" id="contact-form">
+						<div class="form__input-group">
+							<input class="form__field" placeholder="Your Name" />
+							<input class="form__field" placeholder="Your Email" />
+						</div>
+
+						<input class="form__field" placeholder="Your Title" />
+
+						<textarea class="form__field" placeholder="Your Comment"></textarea>
+
+						<input class="form__submit" type="submit" value="Send Message" />
+					</form>
 				</section>
 			</div>
 		</main>
