feat: contact page description

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<main>
 			<div class="container">
 				<section class="section">
-					<h1 class="page-title">UI/UX & Graphic Designer</h1>
+					<h1 class="page-title page-title--centered">UI/UX & Graphic Designer</h1>
 					<p class="paragraph paragraph--centered">
 						I am a Graphic & Web Designer based in New York, specializing in User
 						Interface Design and Development.
