--- a/contact.html
+++ b/contact.html
@@ -37,18 +37,49 @@
 		<main>
 			<div class="container">
 				<section class="section" id="contact">
-					<form class="form" id="contact-form">
-						<div class="form__input-group">
-							<input class="form__field" placeholder="Your Name" />
-							<input class="form__field" placeholder="Your Email" />
+					<div class="stack">
+						<div>
+							<h1 class="page-title">Contact Info:</h1>
+
+							<p class="paragraph">
+								To give give beginning divide, cattle. Give moving won't, there the
+								abundantly she'd she'd brought air upon. Light hath subdue. Life
+								days creature upon first heaven gathering dry.
+							</p>
+
+							<ul class="labelled-list">
+								<li class="labelled-list__item">
+									<strong class="labelled-list__label">Address</strong>
+									10111 Santa Monica Boulevard, LA
+								</li>
+								<li class="labelled-list__item">
+									<strong class="labelled-list__label">Phone</strong>
+									+44 987 065 908
+								</li>
+								<li class="labelled-list__item">
+									<strong class="labelled-list__label">Email</strong>
+									info@Example.com
+								</li>
+								<li class="labelled-list__item">
+									<strong class="labelled-list__label">Fax</strong>
+									+44 987 065 909
+								</li>
+							</ul>
 						</div>
 
-						<input class="form__field" placeholder="Your Title" />
+						<form class="form" id="contact-form">
+							<div class="form__input-group">
+								<input class="form__field" placeholder="Your Name" />
+								<input class="form__field" placeholder="Your Email" />
+							</div>
 
-						<textarea class="form__field" placeholder="Your Comment"></textarea>
+							<input class="form__field" placeholder="Your Title" />
 
-						<input class="form__submit" type="submit" value="Send Message" />
-					</form>
+							<textarea class="form__field" placeholder="Your Comment"></textarea>
+
+							<input class="form__submit" type="submit" value="Send Message" />
+						</form>
+					</div>
 				</section>
 			</div>
 		</main>
